// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home snapshot matches previous 1`] = `
<div>
  <div
    class="container mx-auto px-10 mb-8"
  >
    <div
      class="mb-8"
    >
      <div
        class="react-multi-carousel-list  "
        dir="ltr"
      >
        <ul
          class="react-multi-carousel-track "
          style="transition: none; overflow: unset; transform: translate3d(0px,0,0);"
        />
      </div>
    </div>
    <div
      class="grid grid-cols-1 lg:grid-cols-12 gap-12"
    >
      <div
        class="lg:col-span-8 col-span-1"
      >
        <div
          class="infinite-scroll-component__outerdiv"
        >
          <div
            class="infinite-scroll-component "
            style="height: auto; overflow: auto;"
          >
            <div
              class="bg-white shadow-lg rounded-lg p-2 lg:p-8 pb-12 mb-8"
            >
              <div
                class="relative overflow-hidden shadow-md pb-80 mb-6"
              >
                <span
                  style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
                >
                  <img
                    alt="Pork Adobo"
                    class="object-top absolute h-80 w-full object-cover shadow-lg rounded-t-lg lg:rounded-lg"
                    data-nimg="fill"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                  <noscript />
                </span>
              </div>
              <h1
                class="transition duration-700 text-center mb-8 cursor-pointer hover:text-indigo-600 text-3xl font-semibold "
              >
                <a
                  href="/post/pork-adobo"
                >
                  Pork Adobo
                </a>
              </h1>
              <div
                class="block lg:flex text-center items-center justify-center mb-8 w-full"
              >
                <div
                  class="flex items-cent justify-center mb-4 lg:mb-0 w-full lg:w-auto mr-8"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2730%27%20height=%2730%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="Barefoot Chef"
                      class="align-middle rounded-full"
                      data-nimg="intrinsic"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                    <noscript />
                  </span>
                  <p
                    class="inline align-middle text-grey-700 ml-2 text-lg"
                  >
                    Barefoot Chef
                  </p>
                </div>
                <div
                  class="font-medium text-gray-700"
                >
                  <span>
                    Jan 07, 2023
                  </span>
                </div>
              </div>
              <p
                class="text-center text-lg text-grey-700 font-normal px-4 lg:px-20 mb-8"
              >
                Pork Adobo is a popular dish in the Philippines that is made by braising pork in a mixture of soy sauce, vinegar, and spices.
              </p>
              <div
                class="text-center"
              >
                <span
                  class="transition duration-500 transform hover:-translate-y-1 inline-block bg-indigo-600 text-lg font-medium rounded-full text-white px-8 py-3 cursor-pointer"
                >
                  Continue Reading
                </span>
              </div>
            </div>
            <div
              class="bg-white shadow-lg rounded-lg p-2 lg:p-8 pb-12 mb-8"
            >
              <div
                class="relative overflow-hidden shadow-md pb-80 mb-6"
              >
                <span
                  style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
                >
                  <img
                    alt="Rendang - Slow cooked Dry Curry"
                    class="object-top absolute h-80 w-full object-cover shadow-lg rounded-t-lg lg:rounded-lg"
                    data-nimg="fill"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                  <noscript />
                </span>
              </div>
              <h1
                class="transition duration-700 text-center mb-8 cursor-pointer hover:text-indigo-600 text-3xl font-semibold "
              >
                <a
                  href="/post/rendang"
                >
                  Rendang - Slow cooked Dry Curry
                </a>
              </h1>
              <div
                class="block lg:flex text-center items-center justify-center mb-8 w-full"
              >
                <div
                  class="flex items-cent justify-center mb-4 lg:mb-0 w-full lg:w-auto mr-8"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2730%27%20height=%2730%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="Barefoot Chef"
                      class="align-middle rounded-full"
                      data-nimg="intrinsic"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                    <noscript />
                  </span>
                  <p
                    class="inline align-middle text-grey-700 ml-2 text-lg"
                  >
                    Barefoot Chef
                  </p>
                </div>
                <div
                  class="font-medium text-gray-700"
                >
                  <span>
                    Dec 26, 2022
                  </span>
                </div>
              </div>
              <p
                class="text-center text-lg text-grey-700 font-normal px-4 lg:px-20 mb-8"
              >
                Rendang is a dry curry which includes a mixture of spices and coconut milk, and then slow-cooked over low heat until it is tender and falling apart. The sauce is reduced and thickened as the meat cooks, creating a rich and flavorful coating that is perfect for serving over rice.
              </p>
              <div
                class="text-center"
              >
                <span
                  class="transition duration-500 transform hover:-translate-y-1 inline-block bg-indigo-600 text-lg font-medium rounded-full text-white px-8 py-3 cursor-pointer"
                >
                  Continue Reading
                </span>
              </div>
            </div>
            <div
              class="bg-white shadow-lg rounded-lg p-2 lg:p-8 pb-12 mb-8"
            >
              <div
                class="relative overflow-hidden shadow-md pb-80 mb-6"
              >
                <span
                  style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
                >
                  <img
                    alt="Laksa - Curry Prawn Noodle Soup"
                    class="object-top absolute h-80 w-full object-cover shadow-lg rounded-t-lg lg:rounded-lg"
                    data-nimg="fill"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                  <noscript />
                </span>
              </div>
              <h1
                class="transition duration-700 text-center mb-8 cursor-pointer hover:text-indigo-600 text-3xl font-semibold "
              >
                <a
                  href="/post/laksa-prawn-curry"
                >
                  Laksa - Curry Prawn Noodle Soup
                </a>
              </h1>
              <div
                class="block lg:flex text-center items-center justify-center mb-8 w-full"
              >
                <div
                  class="flex items-cent justify-center mb-4 lg:mb-0 w-full lg:w-auto mr-8"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2730%27%20height=%2730%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="Barefoot Chef"
                      class="align-middle rounded-full"
                      data-nimg="intrinsic"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                    <noscript />
                  </span>
                  <p
                    class="inline align-middle text-grey-700 ml-2 text-lg"
                  >
                    Barefoot Chef
                  </p>
                </div>
                <div
                  class="font-medium text-gray-700"
                >
                  <span>
                    Sep 13, 2022
                  </span>
                </div>
              </div>
              <p
                class="text-center text-lg text-grey-700 font-normal px-4 lg:px-20 mb-8"
              >
                There are about as many different variations of Laksa as there are towns and city's in Malaysia. Some add more or less spice, clams, more or less coconut. The noodles also vary some people prefer rice noodles but for me the egg noodles are the best.
              </p>
              <div
                class="text-center"
              >
                <span
                  class="transition duration-500 transform hover:-translate-y-1 inline-block bg-indigo-600 text-lg font-medium rounded-full text-white px-8 py-3 cursor-pointer"
                >
                  Continue Reading
                </span>
              </div>
            </div>
            <div
              class="bg-white shadow-lg rounded-lg p-2 lg:p-8 pb-12 mb-8"
            >
              <div
                class="relative overflow-hidden shadow-md pb-80 mb-6"
              >
                <span
                  style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
                >
                  <img
                    alt="Homemade Rice Wine (Choujiu)"
                    class="object-top absolute h-80 w-full object-cover shadow-lg rounded-t-lg lg:rounded-lg"
                    data-nimg="fill"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                  <noscript />
                </span>
              </div>
              <h1
                class="transition duration-700 text-center mb-8 cursor-pointer hover:text-indigo-600 text-3xl font-semibold "
              >
                <a
                  href="/post/rice-wine"
                >
                  Homemade Rice Wine (Choujiu)
                </a>
              </h1>
              <div
                class="block lg:flex text-center items-center justify-center mb-8 w-full"
              >
                <div
                  class="flex items-cent justify-center mb-4 lg:mb-0 w-full lg:w-auto mr-8"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2730%27%20height=%2730%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="Barefoot Chef"
                      class="align-middle rounded-full"
                      data-nimg="intrinsic"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                    <noscript />
                  </span>
                  <p
                    class="inline align-middle text-grey-700 ml-2 text-lg"
                  >
                    Barefoot Chef
                  </p>
                </div>
                <div
                  class="font-medium text-gray-700"
                >
                  <span>
                    Sep 13, 2022
                  </span>
                </div>
              </div>
              <p
                class="text-center text-lg text-grey-700 font-normal px-4 lg:px-20 mb-8"
              >
                This Choujiu style rice wine is made with glutinous rice and fermented by a very specific yeast. It's similar to Makgeolli in Korea or Doburoku in Japan. It's generally drunk young as it has been for thousands of years.
              </p>
              <div
                class="text-center"
              >
                <span
                  class="transition duration-500 transform hover:-translate-y-1 inline-block bg-indigo-600 text-lg font-medium rounded-full text-white px-8 py-3 cursor-pointer"
                >
                  Continue Reading
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="lg:col-span-4 cols-span-1"
      >
        <div
          class="lg:sticky relative top-8"
        >
          <div
            class="bg-white shadow-lg rounded-lg p-8 mb-8"
          >
            <h3
              class="text-xl mb-8 font-semibold border-b pb-4"
            >
              Recent Posts
            </h3>
          </div>
          <div
            class="bg-white shadow-lg rounded-lg p-8 mb-8"
          >
            <h3
              class="text-xl mb-8 font-semibold border-b pb-4"
            >
              Categories
            </h3>
          </div>
        </div>
      </div>
    </div>
    <div
      class="container mx-auto px-10 mb-8"
    >
      <div
        class="mt-2 border-t w-full flex justify-between border-blue-400 py-8 "
      >
        <div
          class="md:float-left flex"
        >
          <span
            class="flex cursor-pointer font-bold text-4xl text-white"
          >
            Barefoot Chef Blog 
          </span>
        </div>
        <div
          class="flex text-4xl text-white ml-4"
        >
          <div
            class="hover:cursor-pointer hover:opacity-80 ml-2"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"
              />
            </svg>
          </div>
          <div
            class="hover:cursor-pointer hover:opacity-80 ml-2"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
              />
            </svg>
          </div>
          <div
            class="hover:cursor-pointer hover:opacity-80 ml-2"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
              />
            </svg>
          </div>
        </div>
        <div
          class="hidden md:float-left md:contents"
        >
          <span
            class="md:float-right mt-2 align-middle text-white ml-4 font-semibold cursor-pointer"
          >
            Privacy Policy
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostCard snapshot matches previous 1`] = `
<div>
  <div
    class="bg-white shadow-lg rounded-lg p-2 lg:p-8 pb-12 mb-8"
  >
    <div
      class="relative overflow-hidden shadow-md pb-80 mb-6"
    >
      <span
        style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
      >
        <img
          alt="Pork Adobo"
          class="object-top absolute h-80 w-full object-cover shadow-lg rounded-t-lg lg:rounded-lg"
          data-nimg="fill"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
        />
        <noscript />
      </span>
    </div>
    <h1
      class="transition duration-700 text-center mb-8 cursor-pointer hover:text-indigo-600 text-3xl font-semibold "
    >
      <a
        href="/post/pork-adobo"
      >
        Pork Adobo
      </a>
    </h1>
    <div
      class="block lg:flex text-center items-center justify-center mb-8 w-full"
    >
      <div
        class="flex items-cent justify-center mb-4 lg:mb-0 w-full lg:w-auto mr-8"
      >
        <span
          style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
        >
          <span
            style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
          >
            <img
              alt=""
              aria-hidden="true"
              src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2730%27%20height=%2730%27/%3e"
              style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
            />
          </span>
          <img
            alt="Barefoot Chef"
            class="align-middle rounded-full"
            data-nimg="intrinsic"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
          />
          <noscript />
        </span>
        <p
          class="inline align-middle text-grey-700 ml-2 text-lg"
        >
          Barefoot Chef
        </p>
      </div>
      <div
        class="font-medium text-gray-700"
      >
        <span>
          Jan 07, 2023
        </span>
      </div>
    </div>
    <p
      class="text-center text-lg text-grey-700 font-normal px-4 lg:px-20 mb-8"
    >
      Pork Adobo is a popular dish in the Philippines that is made by braising pork in a mixture of soy sauce, vinegar, and spices.
    </p>
    <div
      class="text-center"
    >
      <span
        class="transition duration-500 transform hover:-translate-y-1 inline-block bg-indigo-600 text-lg font-medium rounded-full text-white px-8 py-3 cursor-pointer"
      >
        Continue Reading
      </span>
    </div>
  </div>
</div>
`;
